k8s/etapa-2.2/03-ingress-contas.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-contas
  namespace: tipsbank-contas
  annotations:
    cert-manager.io/cluster-issuer: tipsbank-selfsigned
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.tipsbank.local
      secretName: api-contas-tipsbank-tls
  rules:
    - host: api.tipsbank.local
      http:
        paths:
          - path: /contas(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-contas
                port:
                  number: 8080
